--- a/Index/js1/configsection.json
+++ b/Index/js1/configsection.json
@@ -4,7 +4,7 @@
       "hideheadergroup": false,
       "hideperiodheader": false,
       "ColorComment": "Theme color can be: red, green, blue, black, orange, teal, pink, cyan, brown, purple",
-      "themecolor": "teal",
+      "themecolor": "brown",
       "FontComment": "Font name can be: opensans, nunito, poppins, raleway, alexandria, commissioner, farro, geologica, dmsans, quicksand ",
       "themefont": "opensans"
     }
