--- a/Index10/js10/configsection10.json
+++ b/Index10/js10/configsection10.json
@@ -3,7 +3,7 @@
       {
         "showperiodheader": true,
         "ColorComment": "Theme color can be: red, green, blue, black, orange, teal, pink, cyan, brown, purple",
-        "themecolor": "purple",
+        "themecolor": "teal",
         "FontComment": "Font name can be: opensans, nunito, poppins, raleway, alexandria, commissioner, farro, geologica, dmsans, quicksand ",
         "themefont": "geologica"
       }
