--- a/Index8/js8/configsection8.json
+++ b/Index8/js8/configsection8.json
@@ -3,7 +3,7 @@
       {
         "showperiodheader": false,
         "ColorComment": "Theme color can be: red, green, blue, black, orange, teal, pink, cyan, brown, purple",
-        "themecolor": "green",
+        "themecolor": "black",
         "FontComment": "Font name can be: opensans, nunito, poppins, raleway, alexandria, commissioner, farro, geologica, dmsans, quicksand ",
         "themefont": "opensans"
       }
