--- a/Index5/js5/configsection5.json
+++ b/Index5/js5/configsection5.json
@@ -1,6 +1,7 @@
 {
     "settings": [
       {
+        "hideheadergroup": true,
         "hideperiodheader": false,
         "ColorComment": "Theme color can be: red, green, blue, black, orange, teal, pink, cyan, brown, purple",
         "themecolor": "red",
