--- a/Index6/js6/configsection6.json
+++ b/Index6/js6/configsection6.json
@@ -1,7 +1,7 @@
 {
   "settings": [
     {
-      "hideheadergroup": false,
+      "hideheadergroup": true,
       "hideperiodheader": false,
       "ColorComment": "Theme color can be: red, green, blue, black, orange, teal, pink, cyan, brown, purple",
       "themecolor": "blue",
